[package]
name = "cucaracha"
version = "0.1.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.6"
log = "0.4.1"
sysfs_gpio = "0.5"
serial = "0.4"